# mini-music

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli_config.rs  lib.rs  main.rs  player.rs  tool.rs
src/player/: app.rs  mod.rs  play_service.rs  player.rs  tool.rs
src/utils/: audio.rs  controller.rs  lyrics.rs  mod.rs
src/view/: cli_ui.rs  mod.rs
